# iota.rs-wasm

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  benchmark.js  node.js  package.json  web.js
examples/get-node-info/: .gitignore  package.json  rollup.config.js
examples/get-node-info/src/: App.svelte  backend.js
examples/rollup/: package.json  rollup.config.js
examples/rollup/electron/: package.json
examples/webpack/: README.md  package.json  quasar.conf.js
examples/webpack/src/pages/: Index.vue
src/: lib.rs
