[package]
name = "iota-wasm"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas.nogueira@iota.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
iota-core = { path = "../iota.rs/iota-core" }
serde = "^1.0.59"
serde_derive = "^1.0.59"
